--- a/Create-Fake-Data-Using-Faker/SB-Code/create-fake-data-2/pom.xml
+++ b/Create-Fake-Data-Using-Faker/SB-Code/create-fake-data-2/pom.xml
@@ -64,7 +64,14 @@
             <version>8.3.0</version>
         </dependency>
 
-	</dependencies>
+        <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.8.13</version>
+        </dependency>
+
+    </dependencies>
 
 	<build>
 		<plugins>
