Updating Codebase to include all 3 DB's - MySQL, PostgreSQL and MS SQL Server

--- a/Spring-Boot-CRUD-REST-API/SB-REST-API-PostGreSQL-MySQL-SQLServer/SB-Code/showcastdb-rest-api/src/main/resources/application.properties
+++ b/Spring-Boot-CRUD-REST-API/SB-REST-API-PostGreSQL-MySQL-SQLServer/SB-Code/showcastdb-rest-api/src/main/resources/application.properties
@@ -9,7 +9,10 @@ spring.jpa.show-sql=true
 
 # 3. Choose which DB profile we want to use
 # For PostGreSQL
-spring.profiles.active=postgresql
+# spring.profiles.active=postgresql
 
 # For MySQL
 # spring.profiles.active=mysql
+
+# For MS SQL Server
+spring.profiles.active=mssqlserver
