--- a/Spring-Boot-CRUD-REST-API/SB-REST-API-PostGreSQL-MySQL-SQLServer/SB-Code/showcastdb-rest-api/pom.xml
+++ b/Spring-Boot-CRUD-REST-API/SB-REST-API-PostGreSQL-MySQL-SQLServer/SB-Code/showcastdb-rest-api/pom.xml
@@ -53,7 +53,15 @@
             <scope>runtime</scope>
         </dependency>
 
-		<dependency>
+        <!-- MS SQL Server JDBC Driver -->
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>13.2.1.jre11</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa-test</artifactId>
 			<scope>test</scope>
