--- a/Spring-Boot-CRUD-REST-API/SB-REST-API-PostGreSQL-SQLServer/SB-Code/showcastdb-rest-api-Without-Swagger/pom.xml
+++ b/Spring-Boot-CRUD-REST-API/SB-REST-API-PostGreSQL-SQLServer/SB-Code/showcastdb-rest-api-Without-Swagger/pom.xml
@@ -46,6 +46,14 @@
 			<scope>runtime</scope>
 		</dependency>
 
+        <!-- MS SQL Server JDBC Driver -->
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>13.2.1.jre11</version>
+            <scope>compile</scope>
+        </dependency>
+
         <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa-test</artifactId>
