--- a/Spring-Boot-CRUD-REST-API/SB-REST-API-PostGreSQL-SQLServer/SB-Code/showcastdb-rest-api-Without-Swagger/src/main/resources/application.properties
+++ b/Spring-Boot-CRUD-REST-API/SB-REST-API-PostGreSQL-SQLServer/SB-Code/showcastdb-rest-api-Without-Swagger/src/main/resources/application.properties
@@ -8,5 +8,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # 3. Choose which DB profile we want to use
+
 # For PostGreSQL
-spring.profiles.active=postgresql
+# spring.profiles.active=postgresql
+
+# For MS SQL Server
+spring.profiles.active=mssqlserver
